--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="enter_code">Enter Code</string>
     <string name="send_message">메세지 입력</string>
     <string name="send">전송</string>
+    <string name="list_member">멤버 목록</string>
 </resources>
