add youtube content edit fragment implement video selection in YoutubeVideoSelectionActivity
use ActivityResultContract instead of onActivityResult
because onActivityResult is deprecated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="content">콘텐츠</string>
     <string name="menu">메뉴</string>
     <string name="add_video">동영상 추가</string>
+    <string name="playlist">재생 목록</string>
 </resources>
