add player realtime listener on / off
fix database tree structrue in content realtime listener
this is to set up listener to detect when it is changed, not when it is connected

use firebase server timestamp to unify all clients time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="menu">메뉴</string>
     <string name="add_video">동영상 추가</string>
     <string name="playlist">재생 목록</string>
+    <string name="realtime">실시간</string>
 </resources>
