move chatroom drawer function to chatroom member tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="add_video">동영상 추가</string>
     <string name="playlist">재생 목록</string>
     <string name="realtime">실시간</string>
+    <string name="member">멤버</string>
+    <string name="exit">나가기</string>
 </resources>
