add video detail button in play-list video fix video remove button to detail button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="realtime">실시간</string>
     <string name="member">멤버</string>
     <string name="exit">나가기</string>
+    <string name="remove">삭제</string>
+    <string name="imagerror">이미지 오류</string>
 </resources>
