--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="exit">나가기</string>
     <string name="remove">삭제</string>
     <string name="imagerror">이미지 오류</string>
+    <string name="create">생성</string>
 </resources>
